# rar2zip

./: .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
rar2zip/: __main__.py  utils.py
rar2zip/templates/: index.html
unrar_tool/: __main__.py  utils.py
unrar_tool/templates/: index.html
